--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -136,9 +136,9 @@
                       <th>Fecha Creación</th>
                       <th>Fecha Entrega.</th>
                       <th>Institución Remitente</th>
-                      <th>Descripción de Comunicación</th>
-                      <th>Tema de Comunicación</th>
-                      <th>Estado de Comunicación</th>
+                      <th>Descripción / Comunicación</th>
+                      <th>Tema / Comunicación</th>
+                      <th>Estado / Comunicación</th>
                       <th>Ver</th>
                   </tr>
               </thead>
@@ -167,7 +167,8 @@
                                    item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
                                    item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc );"
                                    data-toggle="modal" data-target="#t_and_c_m" >
-                            <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Ver Detalle de Comunicación" >pageview</i>
+                            <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Ver Detalle de Comunicación" >pageview</i> -->
+                            <img src="/assets/icons/comunicacion/zoom-interface-symbol-of-text-paper-with-a-magnifier-glass_24x24.png" class="d-inline-block align-top" alt="" title="Ver Detalle de Comunicación">
                          </a>
                   </td>
                 </tr>
