--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
@@ -365,6 +365,7 @@
                         <a *ngIf="item.urlDocumento != null && item.urlDocumento.length > 5"
                           href="http://localhost/sicdoc/symfony/web/uploads/correspondencia/{{ item.urlDocumento }}" target="_blank">
                           <!-- href="http://172.17.4.162/sicdoc/symfony/web/uploads/correspondencia/{{ item.urlDocumento }}" target="_blank"> -->
+                          <!-- href="http://172.17.3.90/sicdoc/symfony/web/uploads/correspondencia/{{ item.urlDocumento }}" target="_blank"> -->
                             <i class="material-icons">photo</i>
                         </a>
                       </td>
