--- a/Angular_SICDOC/sicdoc/src/app/views/shared/header.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/header.component.html
@@ -3,8 +3,9 @@
   <div class="row-fluid">
   <!-- <div  style="width:100%"> -->
     <!-- <div class="page-header"> -->
-      <img src="../assets/images/sreci.png" class="img-fluid pull-xs-left" alt="SRECI" style="width:300px">
-      <h1 style=" font-family: -system-ui ">Sistema de Control de Documentación <small>| SICDOC | SCPI</small></h1>
+      <img src="../assets/images/sreci.png" class="img-fluid pull-xs-left" alt="SRECI" style="width:30%; margin-left:35%">
+      <h1 style=" font-family: -system-ui; margin-left:10% ">Sistema de Control de Documentación <small>| SICDOC | SCPI</small></h1>
+      <!-- <hr> -->
     <!-- </div> -->
   </div>
 </div>
