--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -1,6 +1,8 @@
 <!-- Importaos el Componente de Header -->
 <app-header></app-header>
 
+<hr>
+
 <div class="container-fluid">
 <div class="row-fluid">
     <!-- <nav class="navbar navbar-dark bg-primary"> -->
@@ -13,16 +15,21 @@
           <div  class="collapse navbar-collapse" id="navbarTogglerDemo01">
 
             <ul *ngIf="identity && identity != null" class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <a class="navbar-brand" [routerLink]="['index']" >Dashboard</a>
+              <img src="/assets/icons/home_64x64.png" width="40" height="40" class="d-inline-block align-top" alt="" style="margin-left:-5%; padding: 5px">
+              <a class="navbar-brand" [routerLink]="['index']" > Dashboard</a>
               <!-- Menu de Ingreso y Mantenimiento de Comunicacion | Oficios -->
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Comunicación
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" [routerLink]="['ingreso-comunicacion']" routerLinkActive="active">Ingreso de Comunicación</a>
+                  <a class="dropdown-item" [routerLink]="['ingreso-comunicacion']" routerLinkActive="active">
+                    <img src="/assets/icons/comunicacion/businessmen-disussing_green_24x24.png" class="d-inline-block align-top" alt="">
+                    Ingreso de Comunicación</a>
                   <hr>
-                  <a class="dropdown-item" [routerLink]="['ingreso-comunicacion-tipo']" routerLinkActive="active">Salida de Comunicación</a>
+                  <a class="dropdown-item" [routerLink]="['ingreso-comunicacion-tipo']" routerLinkActive="active">
+                    <img src="/assets/icons/comunicacion/businessmen-disussing_blue_24x24.png" class="d-inline-block align-top" alt="">
+                    Salida de Comunicación</a>
 
                   <!-- <a class="dropdown-item" href="#/" routerLinkActive="active">Respuesta de Comunicacion</a> -->
                 </div>
@@ -34,11 +41,16 @@
                   Seguimiento
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" *ngIf="identity.idTipoUser == 4 || identity.idTipoUser == 1"  [routerLink]="['asignar-actividad']" routerLinkActive="active">Asignar Comunicación</a>
+                  <a class="dropdown-item" *ngIf="identity.idTipoUser == 4 || identity.idTipoUser == 1"  [routerLink]="['asignar-actividad']" routerLinkActive="active">
+                    Asignar Comunicación</a>
                   <!-- <a class="dropdown-item" [routerLink]="['agregar-actividad']" routerLinkActive="active">Agregar Actividad</a> -->
-                  <a class="dropdown-item" [routerLink]="['finalizar-actividad']" routerLinkActive="active">Agregar / Finalizar Comunicación</a>
+                  <a class="dropdown-item" [routerLink]="['finalizar-actividad']" routerLinkActive="active">
+                    <img src="/assets/icons/comunicacion/shopping-support-online_brow_24x24.png" class="d-inline-block align-top" alt="">
+                    Agregar / Finalizar Comunicación</a>
                   <hr>
-                  <a class="dropdown-item" [routerLink]="['seguimiento-actividad']" routerLinkActive="active">Seguimiento de Comunicación</a>
+                  <a class="dropdown-item" [routerLink]="['seguimiento-actividad']" routerLinkActive="active">
+                    <img src="/assets/icons/comunicacion/man-reading_blue_24x24.png" class="d-inline-block align-top" alt="">
+                    Seguimiento de Comunicación</a>
                   <!-- <a class="dropdown-item" [routerLink]="['finalizar-actividad']">Agregar Documentos / Comunicacion</a> -->
                 </div>
               </li>
@@ -50,9 +62,13 @@
                 Consultas
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" [routerLink]="['consulta-maestra-comunicacion']" routerLinkActive="active">Consulta General de Comunicaciones</a>
+                <a class="dropdown-item" [routerLink]="['consulta-maestra-comunicacion']" routerLinkActive="active">
+                  <img src="/assets/icons/comunicacion/opened-book-with-a-magnifier_blue_24x24.png" class="d-inline-block align-top" alt="">
+                  Consulta General de Comunicaciones</a>
                 <hr>
-                <a class="dropdown-item" [routerLink]="['consulta-generacion-reporte']" routerLinkActive="active">Generación de Reportes</a>
+                <a class="dropdown-item" [routerLink]="['consulta-generacion-reporte']" routerLinkActive="active">
+                  <img src="/assets/icons/comunicacion/professional-profile-with-image_blue_24x24.png" class="d-inline-block align-top" alt="">
+                  Generación de Reportes</a>
               </div>
             </li>
 
@@ -62,20 +78,24 @@
                 Mantenimientos
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Mantenimiento de Instituciones</a> -->
+                    <a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Solicitud de Cambio de Fecha / Entrega</a>
+                    <a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Cambio de Fecha / Entrega</a> -->
+                    <!-- <li class="nav-item dropdown"><a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Solicitud de Cambio d Fecha</a></li> -->
+
                 <!-- <hr> -->
                 <!-- <a class="dropdown-item" [routerLink]="['consulta-generacion-reporte']" routerLinkActive="active">Generacion de Reportes</a> -->
               <!-- </div>
             </li> -->
           </ul>
-
+          <!-- Fin de Menu de Matenimiento -->
 
             <!-- Menu de Login Identificado -->
             <ul *ngIf="identity" class="nav navbar-nav navbar-right" id="credentials-top">
               <li>
                 <a class="user-image" >
                   <img src="http://localhost/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">
-                  <!-- <img src="http://172.17.4.162/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt="">           -->
+                  <!-- <img src="http://172.17.4.162/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt=""> -->
+                  <!-- <img src="http://http://172.17.3.90/sicdoc/symfony/web/uploads/users/{{ identity.imagenUsuario }}" style="width:50px" alt=""> -->
                 </a>
               </li>
               <li class="nav-item dropdown">
@@ -86,24 +106,18 @@
                    <!-- <a class="dropdown-item" [routerLink]="['/index']">
                        <i class="material-icons">border_color</i> Editar Perfil</a> -->
                    <a class="dropdown-item" data-toggle="modal" data-target="#myModal" href="/#">
-                     <i class="material-icons">security</i> Cambiar Contraseña</a>
+                     <img src="/assets/icons/media/locked-black-padlock-security-interface-symbol_24x24.png" class="d-inline-block align-top" alt="">
+                     Cambiar Contraseña</a>
+                     <!-- <i class="material-icons">security</i> Cambiar Contraseña</a> -->
                    <hr>
                    <a class="dropdown-item" [routerLink]="['/login/1']">
-                     <i class="material-icons">exit_to_app</i> Cerrar sesión</a>
+                     <img src="/assets/icons/media/sign-out-option_24x24.png" class="d-inline-block align-top" alt="">
+                     Cerrar sesión</a>
+                     <!-- <i class="material-icons">exit_to_app</i> Cerrar sesión</a> -->
                  </div>
                </li>
 
            </ul>
-
-           <!-- Menu de Login No Identificado -->
-           <!-- <ul *ngIf="!identity || identity == null" class="navbar-nav">
-            <li class="nav-item">
-             <a class="nav-link" [routerLink]="['/login']">Acceder</a>
-           </li>
-           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/registro']">Registro</a>
-          </li>
-          </ul> -->
 
           <!-- Menu de Login No Identificado -->
           <ul *ngIf="!identity || identity == null" class="navbar-nav">
@@ -203,5 +217,10 @@
   </div>
 </div> <!-- Fin de Modal Cambio de Contraseña -->
 
+<hr>
 
 <router-outlet></router-outlet>
+
+<br>
+<p style="margin-left:35% ">Sistema de Control de Documentación | SICDOC </p>
+<small style="margin-left:26% " >Copyright &#169; 2017 Secretaría de Relaciones Exteriores y Cooperación Internacional | DCPD </small>
