--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -73,19 +73,19 @@
             </li>
 
             <!-- Menu de Mantenimientos -->
-            <!-- <li class="nav-item dropdown" >
+            <li class="nav-item dropdown" >
               <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Mantenimientos
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Solicitud de Cambio de Fecha / Entrega</a>
-                    <a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Cambio de Fecha / Entrega</a> -->
+                    <a class="dropdown-item" [routerLink]="['solicitud-cambio-fecha']" routerLinkActive="active">Solicitud de Cambio de Fecha / Entrega</a>
+                    <!-- <a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Cambio de Fecha / Entrega</a> -->
                     <!-- <li class="nav-item dropdown"><a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Solicitud de Cambio d Fecha</a></li> -->
 
                 <!-- <hr> -->
                 <!-- <a class="dropdown-item" [routerLink]="['consulta-generacion-reporte']" routerLinkActive="active">Generacion de Reportes</a> -->
-              <!-- </div>
-            </li> -->
+              </div>
+            </li>
           </ul>
           <!-- Fin de Menu de Matenimiento -->
 
