--- a/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
@@ -13,7 +13,7 @@
       </div>
 
 		<form #registerForm="ngForm" (ngSubmit)="onSubmit(registerForm)" name="registerForm" role="form">
-			<h2>Registro de Usuarios <small> | SICDOC.</small></h2>
+			<h2>Registro de Usuarios <small> | SCA.</small></h2>
 			<hr class="colorgraph">
       <div class="panel-heading">
         <h4 class="panel-title">
