--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- Titulo y Barra separadora -->
-  <h2> {{ titulo }} <small> | SICDOC.</small></h2>
+  <h2> {{ titulo }} <small> | SCA.</small></h2>
   <hr class="colorgraph">
   <!-- <div class="row"> -->
     <!-- Segunda Columna -->
