--- a/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- Titulo y Barra separadora -->
-  <h2> {{ titulo }} <small> | SICDOC.</small></h2>
+  <h2> {{ titulo }} <small> | SCA.</small></h2>
   <hr class="colorgraph">
   <div class="row-fluid">
     <div class="col-xs-12 col-md-12 col-lg-12" >
@@ -21,11 +21,11 @@
                       <th>Apellidos</th>
                       <th>Telefonos</th>
                       <th>Correos</th>
-                      <th>Institucion de Contacto</th>
+                      <th>Institución de Contacto</th>
                       <th>Tipo Institución</th>
                       <th>Contacto SRECI</th>
                       <th>Dirección SRECI</th>
-                      <th>Dowload</th>
+                      <th>Download</th>
                   </tr>
               </thead>
               <tbody>
@@ -40,7 +40,7 @@
                        {{ item.idFuncionario.apellido1Funcionario }}</td>
                   <td >{{ item.idFuncionario.idDeptoFuncional.inicialesDeptoFuncional }}</td>
                   <td> <a *ngIf="item.perfilContacto != null && item.perfilContacto.length > 5"
-                    href="http://localhost/sicdoc/symfony/web/uploads/contactos/perfiles/{{ item.perfilContacto }}">
+                        href="http://localhost/sicdoc/symfony/web/uploads/contactos/perfiles/{{ item.perfilContacto }}">
                         <!-- href="http://172.17.4.162/sicdoc/symfony/web/uploads/contactos/perfiles/{{ item.perfilContacto }}"> -->
                         <!-- href="http://172.17.3.90/sicdoc/symfony/web/uploads/contactos/perfiles/{{ item.perfilContacto }}"> -->
                           <i class="material-icons">picture_as_pdf</i>
@@ -132,9 +132,9 @@
                             <label for="exampleInputEmail1">Telefono Celular</label>
                             <input #celular1Contacto="ngModel" type="text" class="form-control" name="celular1Contacto" id="celular1Contacto"
                                 placeholder="99889988" [(ngModel)]="consultaContactos.celular1Contacto" ngControl="celular1Contacto"
-                                required  maxlength="8" pattern ="^([0-9])*$">
+                                  maxlength="8" pattern ="^([0-9])*$">
                             <small class="form-text text-muted" *ngIf="celular1Contacto.errors?.pattern" >Solo se permite Inresar Números</small>
-                            <small class="form-text text-muted" *ngIf="celular1Contacto.errors?.required" >Ingresa el No. de Celular</small>
+                            <!-- <small class="form-text text-muted" *ngIf="celular1Contacto.errors?.required" >Ingresa el No. de Celular</small> -->
                           </div>
 
                           <!-- Telefono Fijo -->
