--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h2> {{ titulo }} <small> | SICDOC.</small></h2>
+  <h2> {{ titulo }} <small> | SCA.</small></h2>
   <hr class="colorgraph">
 
   <!-- Loader de Carga de los Datos -->
