--- a/symfony/app/Resources/views/Emails/sendMail.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMail.html.twig
@@ -137,12 +137,20 @@
             <br>
             <h4> 
                 Saludos Cordiales.
-
+            </h4>    
+                
+             <p>
                 Nahúm Aaron Martínez Salgado
+             </p>
+             <p>
                 Administrador de la Plataforma de Gestión de la Cooperación (PGC)
-                Dirección de Cooperación Privada al Desarrollo
+             </p>
+             <p>
+                Dirección de Cooperación Privada al Desarrollo | DCPD            
+            </p>
+            <p>
                 Secretaria de relaciones Exteriores de Honduras y Cooperación Internacional
-            </h4>
+            </p>
             <img src="./secretaria_exterior.png" alt="SRECI" height="142" width="142">
         </div>
     </div>
