--- a/symfony/app/Resources/views/Emails/changePassWord.html.twig
+++ b/symfony/app/Resources/views/Emails/changePassWord.html.twig
@@ -15,7 +15,22 @@
                 <li> Fecha de Cambio : {{ fechaChange }} </li>                
             </ul>
             
-            <h4> Saludos cordiales </h4>
+            <h4> 
+                Saludos Cordiales.
+            </h4>    
+                
+             <p>
+                Nahúm Aaron Martínez Salgado
+             </p>
+             <p>
+                Administrador de la Plataforma de Gestión de la Cooperación (PGC)
+             </p>
+             <p>
+                Dirección de Cooperación Privada al Desarrollo | DCPD            
+            </p>
+            <p>
+                Secretaria de relaciones Exteriores de Honduras y Cooperación Internacional
+            </p>
         </div>
     </div>
 </body>
