--- a/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
@@ -131,7 +131,22 @@
             </table>
 
             <br>
-            <h4> Saludos cordiales </h4>
+            <h4> 
+                Saludos Cordiales.
+            </h4>    
+                
+             <p>
+                Nahúm Aaron Martínez Salgado
+             </p>
+             <p>
+                Administrador de la Plataforma de Gestión de la Cooperación (PGC)
+             </p>
+             <p>
+                Dirección de Cooperación Privada al Desarrollo | DCPD            
+            </p>
+            <p>
+                Secretaria de relaciones Exteriores de Honduras y Cooperación Internacional
+            </p>
 
             <img src="secretaria_exterior.png" alt="SRECI" height="142" width="142">
         </div>
