--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -225,5 +225,5 @@
 <router-outlet></router-outlet>
 
 <br>
-<p style="margin-left:35% ">Sistema de Control de Actividades | SCA </p>
+<p style="margin-left:35% ">Sistema de Control de Documentación | SICDOC </p>
 <small style="margin-left:26% " >Copyright &#169; 2017 Secretaría de Relaciones Exteriores y Cooperación Internacional | SRECI </small>
