--- a/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <!-- Titulo y Barra separadora -->
-  <h2> {{ titulo }} <small> | SCA.</small></h2>
+  <h2> {{ titulo }} <small> | SICDOC.</small></h2>
   <hr class="colorgraph">
   <div class="row-fluid">
     <div class="col-xs-12 col-md-12 col-lg-12" >
