--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -76,8 +76,8 @@
                       item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
                       item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado )"
                     data-toggle="modal" data-target="#t_and_c_m" >
-                    <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Asignar" >assignment_ind</i> -->
-                    <img src="/assets/icons/comunicacion/zoom-interface-symbol-of-text-paper-with-a-magnifier-glass_24x24.png" class="d-inline-block align-top" alt="" title="Asignar">
+                    <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Asignar" >assignment_ind</i>
+                    <!-- <img src="/assets/icons/comunicacion/zoom-interface-symbol-of-text-paper-with-a-magnifier-glass_24x24.png" class="d-inline-block align-top" alt="" title="Asignar"> -->
                   </a> </td>
             </tr>
         </tbody>
