--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.html
@@ -26,7 +26,7 @@
       </div>
 
 		<form #ingresoComunicacionForm="ngForm" (ngSubmit)="onSubmit(registerTipoComunicacion)" name="ingresoComunicacionForm" role="form">
-			<h2> {{ titulo }} <small> | SCA.</small></h2>
+			<h2> {{ titulo }} <small> | SICDOC.</small></h2>
 			<hr class="colorgraph">
       <div class="panel-heading">
         <h4 class="panel-title">
