--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <!-- Titulo y Barra separadora -->
-  <h2> {{ titulo }} <small> | SCA.</small></h2>
+  <h2> {{ titulo }} <small> | SICDOC.</small></h2>
   <hr class="colorgraph">
   <div class="row-fluid">
     <div class="col-xs-12 col-md-12 col-lg-12" id="primero">
