--- a/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/contactos/contactos.component.html
@@ -221,10 +221,11 @@
                         <hr class="colorgraph">
                         <!-- Boton de envio de Datos de la Data -->
                         <div class="row">
-                  				<div class="col-xs-12 col-md-3">
+                  				<div class="col-xs-8 col-md-3">
                             <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="17"
                                 [disabled]="!contactForm.valid" >
                           </div>
+                          <button type="button" id="closeModalFinCom" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
                         </div>
                         <!-- <button class="btn btn-primary" type="submit" [disabled]="!ingresoComunicacionForm.valid">Submit form</button> -->
                     </form>
